--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,10 @@ jobs:
       - uses: actions/checkout@v4
 
       # Setups the premake build system
-      # - name: Setup Premake
-      #  run: echo Hello, world!
+      - name: Download Premake
+        # You may pin to the exact commit or the version.
+        # uses: BEASTSM96/premake-action@af89415448f5e5cf52c5aa48d040eeeb0310480a
+        uses: BEASTSM96/premake-action@v1.3.1
 
       # Runs a set of commands using the runners shell
       - name: Test
