--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,18 @@ jobs:
       - uses: actions/checkout@v4
 
       # Setups the premake build system
-      - name: Download Premake
+      - name: Setup premake
         # You may pin to the exact commit or the version.
-        # uses: BEASTSM96/premake-action@af89415448f5e5cf52c5aa48d040eeeb0310480a
-        uses: BEASTSM96/premake-action@v1.3.1
+        # uses: abel0b/setup-premake@b80dc6f70e8ab159fb854bdadbeb1a53cfc28723
+        uses: abel0b/setup-premake@v2.4
+        with:
+          # Premake version
+          version: "5.0.0-beta2"
+          # Premake path
+          #path: # optional, default is .premake
 
       # Runs a set of commands using the runners shell
       - name: Test
         run: |
           cd premake
-          premake --file=run_tests.lua self-test
+          premake5 --file=run_tests.lua self-test
