Changed CMAKE_MODULE_PATH directories

--- a/cmake/tests/CMakeLists.txt
+++ b/cmake/tests/CMakeLists.txt
@@ -36,7 +36,7 @@ get_cmake_test()
 # Include CMakeTest
 include(${cmake_test_SOURCE_DIR}/cmake/get_cmaize.cmake)
 include(${cmake_test_SOURCE_DIR}/cmake/get_cmakepp_lang.cmake)
-list(APPEND CMAKE_MODULE_PATH "${cmaize_SOURCE_DIR}" "${cmakepp_SOURCE_DIR}")
+list(APPEND CMAKE_MODULE_PATH "${cmaize_SOURCE_DIR}/cmake" "${cmakepp_SOURCE_DIR}/cmake")
 include(cmake_test/cmake_test)
 
 # custom:
