--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,28 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# force cargo to use color
+env: 
+  CARGO_TERM_COLOR: always
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # premake tests
+  # build and test the wares cli tool
+  native_build_and_test:
+    name: Rust wares - latest
+    runs-on: ubuntu-latest
+    # strategy:
+    #   matrix:
+    #     toolchain:
+    #       - stable
+    #       - beta
+    #       - nightly
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup update stable && rustup default stable
+      - run: cargo build
+      - run: cargo test
+  # test the premake integration
   premake_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
