--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ required-features = ["build-binary"]
 [dependencies]
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
-semver = "1.0.0"
+semver = { version = "1.0.0", features = [ "serde" ] }
 git2 = "0.19.0"
 toml = "0.8.19"
-thiserror = "1.0.63"
+snafu = "0.8.5" # thiserror = "1.0.63"
 regex = "1.10.6"
 colored = "2.1.0"
+spinoff = "0.8.0"
 
 # needed for the binary target
 clap = { version = "4.5.0", features = [ "derive" ], optional = true }
